test/scc/ext/tm/semantic-errors/016.a
016.t:5:10: error: volatile objects cannot be used within _Atomic block